Typo in packages.py Updated startConversion to support CL with updated console messages chmod to auxiliary sh before execution prerequisites checks for $JAVA_HOME Need to push stable jar inside the tree