@@ -1,12 +1,17 @@
 #!/bin/bash
 MYSELF=`basename $0`
 WORKINDIR=$(pwd)
+JARNAME="lar.jar"
+#
 TMPNAME="tmp"
 IMGDIRNAME="img"
 BORDERDIRNAME="border"
 COMPDIR="comp"
 COMPDIRBIN="compbin"
 STLDIR="stl"
+# ****
+chmod 0755 ./sh/*.sh
+# ****
 
 show_help() {
 	echo "Either run without args or with"
@@ -248,20 +253,38 @@ COMPUTATION_DIR_BIN=$TMPDIRECTORY/$COMPDIRBIN
 mkdir -p $COMPUTATION_DIR_BIN &> /dev/null
 
 if [ $OPENCL -eq 1 ]; then
+	echo -n "Computing input JSON chains... "
 	python ./py/computation/step_calcchains.py -b $BORDER_DIR/$BORDER_FILE -x $BORDER_X -y $BORDER_Y -z $BORDER_Z -i $TMPIMGDIRECTORY -c $COLORS -q $BESTFILE -o $COMPUTATION_DIR &> /dev/null
 	if [ $? -ne 0 ]; then
 		echo "Error while computing chains"
 		exit 1
-	fi	
+	fi
+	echo -n "done!"
+	echo ""	
 	# Call OpenCL JAR
 	# here use updated jar that outputs directly in binary in $COMPUTATION_DIR_BIN
+	echo -n "Computing output binary chains... "
+	for selettoreFile in $(ls $COMPUTATION_DIR/*.json); do
+		selettoreId=$(echo $selettoreFile | cut -d'.' -f1 | cut -d'-' -f2)
+		LD_PRELOAD=$JAVA_HOME/jre/lib/amd64/libjsig.so java -d64 -Xcheck:jni -Xmx14G -XX:MaxPermSize=4G -XX:PermSize=512M -jar ./java/$JARNAME -b $BORDER_DIR/$BORDER_FILE -s $COMPUTATION_DIR/$selettoreFile -y $COMPUTATION_DIR_BIN/output-$selettoreId.bin
+		if [ $? -ne 0 ]; then
+			echo "Error while computing output binary chains"
+			exit 1
+		fi
+	done
+	echo -n "done!"
+	echo ""	
 else
+	echo -n "Computing output JSON chains... "
 	python ./py/computation/step_calcchains.py -r -b $BORDER_DIR/$BORDER_FILE -x $BORDER_X -y $BORDER_Y -z $BORDER_Z -i $TMPIMGDIRECTORY -c $COLORS -q $BESTFILE -o $COMPUTATION_DIR &> /dev/null
 	if [ $? -ne 0 ]; then
 		echo "Error while computing output chains"
 		exit 1
 	fi
+	echo -n "done!"
+	echo ""
 	#Convert output-*.json to .bin
+	echo -n "Converting to binary ... "
 	for genOut in $(ls $COMPUTATION_DIR/output); do
 		python ./py/computation/step_convoutput.py -i $COMPUTATION_DIR/$genOut -o $COMPUTATION_DIR_BIN &> /dev/null
 		if [ $? -ne 0 ]; then
@@ -269,12 +292,15 @@ else
 			exit 1
 		fi
 	done
+	echo -n "done!"
+	echo ""
 fi
 
 # stl conversion and merge
 STL_DIR=$TMPDIRECTORY/$STLDIR
 mkdir -p $STL_DIR &> /dev/null
 COUNTFILE=1
+echo "Converting to stl model ... "
 for binOut in $(ls $COMPUTATION_DIR_BIN); do
 	python ./py/computation/step_triangularmesh.py -x $BORDER_X -y $BORDER_y -z $BORDER_Z -i $COMPUTATION_DIR_BIN/$binOut -o $STL_DIR &> /dev/null
 	if [ $? -ne 0 ]; then
